# Learn-OpenGL

./: .gitignore  CMakeLists.txt
include/: shader.h
shaders/: 3.3.shader.fs  3.3.shader.vs
src/: glad.c  main.cpp
